--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -18,7 +18,10 @@ const {
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
     <link rel="icon" href="/images/gloriaLogo.png" />
     <meta name="description" content={description} />
     <meta property="og:title" content={title} />
