--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -29,7 +29,7 @@ const links = [
       <a
         href="/contacto"
         class="ml-2 rounded-full bg-brand-600 text-white px-4 py-2 hover:bg-brand-700"
-        >Reserva</a
+        >Contacto</a
       >
     </nav>
   </div>
