--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -137,7 +137,7 @@ const schemaOrgJSONLD = {
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
-    <link rel="icon" href="/public/favicon.ico" sizes="any" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
     <meta name="description" content={description} />
     <meta name="keywords" content={keywords} />
     <link rel="canonical" href={currentURL} />
